fix: horizontal scroll on smaller screens

--- a/src/scss/2022/components/_comparison-chart.scss
+++ b/src/scss/2022/components/_comparison-chart.scss
@@ -11,6 +11,7 @@
   padding-bottom: 6rem;
   padding-left: var(--chart-spacing);
   position: relative;
+  width: 100%;
   width: calc(100vw - (var(--space-limiter-margin) - var(--chart-spacing)));
 
   @media (min-width: mq(lg)) {
@@ -31,8 +32,10 @@
   }
 
   &__y-axis {
-    background-color: var(--color-black);
-    z-index: var(--z3);
+    // background-color: var(--color-black);
+    background-image: linear-gradient(to right, var(--color-black) 40%, transparent);
+    backdrop-filter: blur(0.5rem);
+    z-index: var(--z4);
     position: sticky;
     top: 0;
     padding-bottom: 2%;
@@ -41,11 +44,23 @@
     flex-direction: column;
     justify-content: space-between;
     text-align: right;
-    padding-right: var(--space-sm);
+    padding-right: var(--space-xs);
+    box-shadow: -1rem 0 var(--color-black);
+    
+    @media (min-width: mq('md')) {
+      padding-right: var(--space-sm);
+    }
   }
 
   &__y-axis-item {
-    @include typography.style("body-small");
+    font-stretch: 80%;
+    font-size: 0.875em;
+    font-weight: 200;
+    
+    @media (min-width: mq('md')) {
+      @include typography.style("body-small");
+      font-stretch: 100%;
+    }
   }
 
   &__y-axis-label {
@@ -56,9 +71,13 @@
     background-color: var(--color-black);
     writing-mode: vertical-lr;
     text-align: center;
-    @include typography.style("body-details");
-    
-    @media (min-width: mq(lg)) {
+    font-size: 0.875em;
+    font-weight: 400;
+    line-height: 0.75;
+    padding-right: var(--space-xs);
+
+    @media (min-width: mq('lg')) {
+      @include typography.style("body-details");
       padding-right: var(--space-sm);
     }
   }
