--- a/src/scss/2022/components/_section-header.scss
+++ b/src/scss/2022/components/_section-header.scss
@@ -8,7 +8,6 @@
   padding: var(--space-10vh) var(--space-limiter-margin) 0;
   margin: 0 calc(var(--space-limiter-margin) * -1) var(--space-10vh);
   position: relative;
-  overflow: hidden;
   
   &::after {
     --max-size: 40rem;
